--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="AyoubProSlides offers professional and custom PowerPoint presentation services with sleek designs, animations, and quick delivery options." />
         <meta name="keywords" content="PowerPoint presentations, custom slides, professional presentations, AyoubProSlides, presentation design, pitch decks" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>AyoubProSlides</title>
 
