--- a/create.html
+++ b/create.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Request your custom PowerPoint presentation. Fill out the form to provide your specifications, and we will create it for you!">
     <meta name="keywords" content="custom PowerPoint presentation, request presentation, AyoubProSlides">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Presentation - AyoubProSlides</title>
     <link rel="icon" type="image/jpg" href="" id="favicon">
     <link rel="stylesheet" href="styles.css">
