--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="PowerPoint presentations, custom slides, professional presentations, AyoubProSlides, presentation design, pitch decks" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>AyoubProooSlides</title>
+        <title>AyoubProSlides</title>
 
         <link rel="icon" type="image/jpg" href="" id="favicon">
 
