--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
                     </div>
                 </div>
             </section>
+
+            <section class="how-to">
+                <h2>How It Works?</h2>
+                <div class="instructions-container">
+                    <div class="instruction">
+                        <img src="" alt="Step 1: Go to create page" id="gtcp">
+                        <h3>1. Go to create page</h3>
+                        <p>Navigate to our "Create" page to begin crafting your custom presentation. This is where you start the process by selecting the details that fit your needs.</p>
+                    </div>
+                    <div class="instruction">
+                        <img src="" alt="Step 2: Fullfill the form" id="ftf">
+                        <h3>2. Fullfill the form</h3>
+                        <p>Fill out the order form by entering the necessary details, including the type of presentation, number of slides, and any specific content you want to include.</p>
+                    </div>
+                    <div class="instruction">
+                        <img src="" alt="Step 3: Pay via PayPal" id="pvp">
+                        <h3>3. Pay via PayPal</h3>
+                        <p>Once you've reviewed the video demonstration of the presentation, and you’re satisfied with what you see, you can complete your purchase by sending the agreed amount to our PayPal email address.</p>
+                    </div>
+                    <div class="instruction">
+                        <img src="" alt="Step 4: Receive the PowerPoint presentation" id="rtpp">
+                        <h3>4. Receive the PowerPoint presentation</h3>
+                        <p>Once your payment is confirmed, you’ll receive your professionally designed PowerPoint presentation directly to your inbox.</p>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer>
@@ -122,7 +149,11 @@
             'pdc.jpg': 'pdc',
             'po.jpg': 'po',
             'logo.jpg': 'favicon',
-            'logo1.jpg': 'header-logo'
+            'logo1.jpg': 'header-logo',
+            'rtpp.jpg': 'rtpp',
+            'gtcp.jpg': 'gtcp',
+            'pvp.jpg': 'pvp',
+            'ftf.jpg': 'ftf'
         };
 
         Object.keys(imageMapping).forEach((filename) => {
