--- a/index.html
+++ b/index.html
@@ -102,6 +102,42 @@
                 </div>
             </section>
 
+            <section class="price-section">
+                <h2>Prices</h2>
+                <h3>For students</h3>
+                <div class="prices">
+                    <div class="price">
+                        <h2>10 to 25 Slides</h2>
+                        <p>$20 to $40</p>
+                    </div>
+
+                    <div class="price">
+                        <h2>25 to 40 Slides</h2>
+                        <p>$40 to $60</p>
+                    </div>
+
+                    <div class="price">
+                        <h2>40+ Slides</h2>
+                        <p>$65+</p>
+                    </div>
+                </div>
+                <h3>For business</h3>
+                <div class="prices">
+                    <div class="price">
+                        <h2>10 to 25 Slides</h2>
+                        <p>$60 to $75</p>
+                    </div>
+                    <div class="price">
+                        <h2>25 to 40 Slides</h2>
+                        <p>$75 to $150</p>
+                    </div>
+                    <div class="price">
+                        <h2>40+ Slides</h2>
+                        <p>$150 to $250</p>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer>
