--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'G-Q3LXLHFDNT');
+            gtag('config', 'G-WBRQCKJ1L8');
         </script>
 
 
