--- a/create.html
+++ b/create.html
@@ -20,7 +20,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-Q3LXLHFDNT');
+        gtag('config', 'G-WBRQCKJ1L8');
     </script>
 </head>
 <body>
