--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
                 </div>
             </section>
 
+            <section class="paypal-section">
+                <script src="https://www.paypal.com/sdk/js?client-id=BAAc2-sbrRY0hYlvCOPS3jIXUkw937T-0MU9b7htil3i7h_hzQkAHyznN8cI7-Yf68lonoaFN_3PvycFPs&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
+                <div id="paypal-container-4BD399W5TD2KA"></div>
+                <script>
+                    paypal.HostedButtons({
+                        hostedButtonId: "4BD399W5TD2KA",
+                    }).render("#paypal-container-4BD399W5TD2KA")
+                </script>
+            </section>
+
             <section class="price-section">
                 <h2>Prices</h2>
                 <h3>For students</h3>
