--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             gtag('config', 'G-WBRQCKJ1L8');
         </script>
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036" crossorigin="anonymous"></script>
+
 
 
     </head>
