--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
                 </div>
             </section>
 
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036"
+                 crossorigin="anonymous"></script>
+            <!-- HomePage -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5890747611356036"
+                 data-ad-slot="2194380153"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+
             <section class="how-to">
                 <h2>How It Works?</h2>
                 <div class="instructions-container">
