--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="footer-section services">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="index.html">Custom Presentations</a></li>
+                        <li><a href="index.html">Custom Presentation</a></li>
                         <li><a href="index.html">Template Design</a></li>
                         <li><a href="index.html">Presentation Optimization</a></li>
                         <li><a href="index.html">Pitch Deck Creation</a></li>
