--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
                         <h3>4. Receive the PowerPoint presentation</h3>
                         <p>Once your payment is confirmed, you’ll receive your professionally designed PowerPoint presentation directly to your inbox.</p>
                     </div>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036"
+                         crossorigin="anonymous"></script>
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-format="fluid"
+                         data-ad-layout-key="-7k+er-k-t+3r"
+                         data-ad-client="ca-pub-5890747611356036"
+                         data-ad-slot="6351750036"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
             </section>
 
