--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- HomePage -->
             <ins class="adsbygoogle"
-                 style="display:block"
+                 style="display:block; width:250px; height:250px;"
                  data-ad-client="ca-pub-5890747611356036"
                  data-ad-slot="2194380153"
                  data-ad-format="auto"
