--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- HomePage -->
             <ins class="adsbygoogle"
-                 style="display:block; width:250px; height:250px;"
+                 style="display:block; width:250px; height:auto;"
                  data-ad-client="ca-pub-5890747611356036"
                  data-ad-slot="2194380153"
                  data-ad-format="auto"
@@ -115,7 +115,7 @@
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036"
                          crossorigin="anonymous"></script>
                     <ins class="adsbygoogle"
-                         style="display:block"
+                         style="display:block; width:250px; height:auto;"
                          data-ad-format="fluid"
                          data-ad-layout-key="-7k+er-k-t+3r"
                          data-ad-client="ca-pub-5890747611356036"
