--- a/create.html
+++ b/create.html
@@ -72,6 +72,18 @@
             </form>
 
         </section>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036"
+             crossorigin="anonymous"></script>
+        <!-- CreatePage Ad -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-5890747611356036"
+             data-ad-slot="8635605354"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </main>
 
     <footer>
