--- a/index.html
+++ b/index.html
@@ -1,207 +1,144 @@
 <!doctype html>
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="AyoubProSlides offers professional and custom PowerPoint presentation services with sleek designs, animations, and quick delivery options." />
-        <meta name="keywords" content="PowerPoint presentations, custom slides, professional presentations, AyoubProSlides, presentation design, pitch decks" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>AyoubProSlides</title>
-
-        <link rel="icon" type="image/jpg" href="" id="favicon">
-
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux&display=swap" rel="stylesheet">
-
-        <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
-
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3LXLHFDNT"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-WBRQCKJ1L8');
-        </script>
-
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036" crossorigin="anonymous"></script>
-
-
-
-    </head>
-
-    <body>
-
-        <header>
-            <div class="header-content">
-                <div class="left-icon">
-                    <img src="" alt="AyoubProSlides" id="header-logo">
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="create.html">Create</a></li>
-                    </ul>
-                </nav>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="AyoubProSlides offers professional and custom PowerPoint presentation services with sleek designs, animations, and quick delivery options." />
+    <meta name="keywords" content="PowerPoint presentations, custom slides, professional presentations, AyoubProSlides, presentation design, pitch decks" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AyoubProSlides</title>
+    <link rel="icon" type="image/jpg" href="" id="favicon">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux&display=swap" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <div class="left-icon">
+                <img src="" alt="AyoubProSlides" id="header-logo">
             </div>
-        </header>
-
-        <main>
-            <section class="hero-section">
-                <h2>Transform Your Ideas into Stunning Presentations!</h2>
-                <p>Professional PowerPoint slides tailored to your needs.</p>
-                <button class="cta" id="cta">Get Started</button>
-            </section>
-
-            <section class="our-services-section">
-                <h2>Our services</h2>
-                <div class="services">
-                    <div class="service">
-                        <img src="" alt="Custom PowerPoint Presentations" id="cp">
-                        <p>Custom PowerPoint Presentations</p>
-                    </div>
-                    <div class="service">
-                        <img src="" alt="Template Design" id="td">
-                        <p>Template Design</p>
-                    </div>
-                    <div class="service">
-                        <img src="" alt="Presentation Optimization" id="po">
-                        <p>Presentation Optimization</p>
-                    </div>
-                    <div class="service">
-                        <img src="" alt="Pitch Deck Creation" id="pdc">
-                        <p>Pitch Deck Creation</p>
-                    </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="create.html">Create</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero-section">
+            <h2>Transform Your Ideas into Stunning Presentations!</h2>
+            <p>Professional PowerPoint slides tailored to your needs.</p>
+            <button class="cta" id="cta">Get Started</button>
+        </section>
+        <section class="our-services-section">
+            <h2>Our Services</h2>
+            <div class="services">
+                <div class="service">
+                    <img src="" alt="Custom PowerPoint Presentations" id="cp">
+                    <p>Custom PowerPoint Presentations</p>
                 </div>
-            </section>
-
-            <!-- HomePage -->
-            <ins class="adsbygoogle"
-                 style="display:block; width:250px; height:auto;"
-                 data-ad-client="ca-pub-5890747611356036"
-                 data-ad-slot="2194380153"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-
-            <section class="how-to">
-                <h2>How It Works?</h2>
-                <div class="instructions-container">
-                    <div class="instruction">
-                        <img src="" alt="Step 1: Go to create page" id="gtcp">
-                        <h3>1. Go to create page</h3>
-                        <p>Navigate to our "Create" page to begin crafting your custom presentation. This is where you start the process by selecting the details that fit your needs.</p>
-                    </div>
-                    <div class="instruction">
-                        <img src="" alt="Step 2: Fullfill the form" id="ftf">
-                        <h3>2. Fullfill the form</h3>
-                        <p>Fill out the order form by entering the necessary details, including the type of presentation, number of slides, and any specific content you want to include.</p>
-                    </div>
-                    <div class="instruction">
-                        <img src="" alt="Step 3: Pay via PayPal" id="pvp">
-                        <h3>3. Pay via PayPal</h3>
-                        <p>Once you've reviewed the video demonstration of the presentation, and you’re satisfied with what you see, you can complete your purchase by sending the agreed amount to our PayPal email address.</p>
-                    </div>
-                    <div class="instruction">
-                        <img src="" alt="Step 4: Receive the PowerPoint presentation" id="rtpp">
-                        <h3>4. Receive the PowerPoint presentation</h3>
-                        <p>Once your payment is confirmed, you’ll receive your professionally designed PowerPoint presentation directly to your inbox.</p>
-                    </div>
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5890747611356036"
-                         crossorigin="anonymous"></script>
-                    <ins class="adsbygoogle"
-                         style="display:block; width:250px; height:auto;"
-                         data-ad-format="fluid"
-                         data-ad-layout-key="-7k+er-k-t+3r"
-                         data-ad-client="ca-pub-5890747611356036"
-                         data-ad-slot="6351750036"></ins>
-                    <script>
-                         (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
+                <div class="service">
+                    <img src="" alt="Template Design" id="td">
+                    <p>Template Design</p>
                 </div>
-            </section>
-
-            <section class="paypal-section">
-                <script src="https://www.paypal.com/sdk/js?client-id=BAAc2-sbrRY0hYlvCOPS3jIXUkw937T-0MU9b7htil3i7h_hzQkAHyznN8cI7-Yf68lonoaFN_3PvycFPs&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
-                <div id="paypal-container-4BD399W5TD2KA"></div>
-                <script>
-                    paypal.HostedButtons({
-                        hostedButtonId: "4BD399W5TD2KA",
-                    }).render("#paypal-container-4BD399W5TD2KA")
-                </script>
-            </section>
-
-            <section class="price-section">
-                <h2>Prices</h2>
-                <h3>For students</h3>
-                <div class="prices">
-                    <div class="price">
-                        <h2>10 to 25 Slides</h2>
-                        <p>$20 to $40</p>
-                    </div>
-
-                    <div class="price">
-                        <h2>25 to 40 Slides</h2>
-                        <p>$40 to $60</p>
-                    </div>
-
-                    <div class="price">
-                        <h2>40+ Slides</h2>
-                        <p>$65+</p>
-                    </div>
+                <div class="service">
+                    <img src="" alt="Presentation Optimization" id="po">
+                    <p>Presentation Optimization</p>
                 </div>
-                <h3>For business</h3>
-                <div class="prices">
-                    <div class="price">
-                        <h2>10 to 25 Slides</h2>
-                        <p>$60 to $75</p>
-                    </div>
-                    <div class="price">
-                        <h2>25 to 40 Slides</h2>
-                        <p>$75 to $150</p>
-                    </div>
-                    <div class="price">
-                        <h2>40+ Slides</h2>
-                        <p>$150 to $250</p>
-                    </div>
-                </div>
-            </section>
-
-        </main>
-
-        <footer>
-            <div class="footer-content">
-                <div class="footer-section about">
-                    <h3>About AyoubProSlides</h3>
-                    <p>At AyoubProSlides, we specialize in creating unique and professional PowerPoint presentations tailored to your needs. Our designs ensure your ideas shine through!</p>
-                </div>
-                <div class="footer-section services">
-                    <h3>Our Services</h3>
-                    <ul>
-                        <li><a href="index.html">Custom Presentation</a></li>
-                        <li><a href="index.html">Template Design</a></li>
-                        <li><a href="index.html">Presentation Optimization</a></li>
-                        <li><a href="index.html">Pitch Deck Creation</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section social">
-                    <h3>Follow Us</h3>
-                    <ul>
-                        <li><a href="https://instagram.com/ayoubproslides" target="_blank">Instagram</a></li>
-                        <li><a href="https://www.facebook.com/profile.php?id=61566773897958" target="_blank">Facebook</a></li>
-                    </ul>
+                <div class="service">
+                    <img src="" alt="Pitch Deck Creation" id="pdc">
+                    <p>Pitch Deck Creation</p>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 AyoubProSlides | All Rights Reserved</p>
+        </section>
+        <section class="how-to">
+            <h2>How It Works?</h2>
+            <div class="instructions-container">
+                <div class="instruction">
+                    <img src="" alt="Step 1: Go to create page" id="gtcp">
+                    <h3>1. Go to create page</h3>
+                    <p>Navigate to our "Create" page to begin crafting your custom presentation.</p>
+                </div>
+                <div class="instruction">
+                    <img src="" alt="Step 2: Fill out the form" id="ftf">
+                    <h3>2. Fill out the form</h3>
+                    <p>Fill out the order form by entering the necessary details.</p>
+                </div>
+                <div class="instruction">
+                    <img src="" alt="Step 3: Pay via PayPal" id="pvp">
+                    <h3>3. Pay via PayPal</h3>
+                    <p>Complete your purchase by sending the agreed amount to our PayPal email address.</p>
+                </div>
+                <div class="instruction">
+                    <img src="" alt="Step 4: Receive the PowerPoint presentation" id="rtpp">
+                    <h3>4. Receive your presentation</h3>
+                    <p>You’ll receive your professionally designed presentation directly to your inbox.</p>
+                </div>
             </div>
-        </footer>
-
+        </section>
+        <section class="price-section">
+            <h2>Prices</h2>
+            <h3>For Students</h3>
+            <div class="prices">
+                <div class="price">
+                    <h2>10 to 25 Slides</h2>
+                    <p>$20 to $40</p>
+                </div>
+                <div class="price">
+                    <h2>25 to 40 Slides</h2>
+                    <p>$40 to $60</p>
+                </div>
+                <div class="price">
+                    <h2>40+ Slides</h2>
+                    <p>$65+</p>
+                </div>
+            </div>
+            <h3>For Business</h3>
+            <div class="prices">
+                <div class="price">
+                    <h2>10 to 25 Slides</h2>
+                    <p>$60 to $75</p>
+                </div>
+                <div class="price">
+                    <h2>25 to 40 Slides</h2>
+                    <p>$75 to $150</p>
+                </div>
+                <div class="price">
+                    <h2>40+ Slides</h2>
+                    <p>$150 to $250</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>About AyoubProSlides</h3>
+                <p>We specialize in creating unique and professional PowerPoint presentations tailored to your needs. Our designs ensure your ideas shine through!</p>
+            </div>
+            <div class="footer-section services">
+                <h3>Our Services</h3>
+                <div class="footer-services">
+                    <p>Custom Presentations</p>
+                    <p>Template Design</p>
+                    <p>Presentation Optimization</p>
+                    <p>Pitch Deck Creation</p>
+                </div>
+            </div>
+            <div class="footer-section social">
+                <h3>Follow Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/ayoubproslides/" target="_blank">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 AyoubProSlides | All Rights Reserved</p>
+        </div>
+    </footer>
     <script>
         const ctaButton = document.getElementById('cta');
         ctaButton.addEventListener('click', function() {
@@ -253,9 +190,5 @@
         });
   
     </script>
-
-        
-    </body>
-
-
+</body>
 </html>
